updated changed messaged from 1.1 to 1.2

--- a/repub_configs/ark_client_republishers.cfg
+++ b/repub_configs/ark_client_republishers.cfg
@@ -15,8 +15,8 @@ send_goal, ark, String, ros2lcm
 platform_control_cmd_vel, ark, Twist, lcm2ros
 map_data_features_markers_waypoint, ark, GeometryArray, lcm2ros
 map_data_features_zones_exclusion, ark, GeometryArray, lcm2ros
-control_selection_current_mode, ark, Mode, lcm2ros
-slam_current_mode, ark, Mode, lcm2ros
+control_selection_current_mode, ark, AutonomyMode, lcm2ros
+slam_current_mode, ark, SlamMode, lcm2ros
 slam_localization_status, ark, LocalizationStatus, lcm2ros
 slam_estimated_pose, ark, PoseWithCovarianceStamped, lcm2ros
 path_2d, ark, Pose2DArray, lcm2ros
@@ -28,7 +28,7 @@ path_planner_distance_to_goal, ark, DistanceToGoal, lcm2ros
 robot_state_aggregator_state, ark, RobotState, lcm2ros
 map_data_loaded_map_filename, ark, String, lcm2ros
 map_data_md5sum, ark, String, lcm2ros
-control_selection_current_mode, ark, Mode, lcm2ros
+control_selection_current_mode, ark, AutonomyMode, lcm2ros
 control_selection_autonomy_disable_sources, ark, StringArray, lcm2ros
 control_selection_autonomy_pause_sources, ark, StringArray, lcm2ros
 control_selection_control_state, ark, ControlSelectionState, lcm2ros
@@ -48,8 +48,8 @@ front_scan, ark, LaserScan, ros2lcm
 
 ### Service Calls ###
 map_data_clear_call, ark, Empty, ros2lcm
-control_selection_set_mode_call, ark, Mode, ros2lcm
-slam_set_mode_call, ark, Mode, ros2lcm
+control_selection_set_mode_call, ark, AutonomyMode, ros2lcm
+slam_set_mode_call, ark, SlamMode, ros2lcm
 slam_set_initial_pose_call, ark, PoseWithCovarianceStamped, ros2lcm
 control_selection_autonomy_clear_all_disabled_call, ark, Empty, ros2lcm
 control_selection_autonomy_clear_all_paused_call, ark, Empty, ros2lcm
@@ -63,7 +63,7 @@ control_selection_core_disable_call, ark, String, ros2lcm
 control_selection_core_enable_call, ark, String, ros2lcm
 control_selection_core_pause_call, ark, String, ros2lcm
 control_selection_core_resume_call, ark, String, ros2lcm
-control_selection_set_mode_call, ark, Mode, ros2lcm
+control_selection_set_mode_call, ark, AutonomyMode, ros2lcm
 map_data_delete_map_call, ark, String, ros2lcm
 map_data_list_maps_call, ark, Empty, ros2lcm
 map_data_load_map_from_disk_call, ark, String, ros2lcm
