Removed duplicate message shim and updated messages to the right types

--- a/repub_configs/ark_client_republishers.cfg
+++ b/repub_configs/ark_client_republishers.cfg
@@ -66,7 +66,7 @@ control_selection_set_mode_call, ark, AutonomyMode, ros2lcm
 map_data_delete_map_call, ark, String, ros2lcm
 map_data_list_maps_call, ark, Empty, ros2lcm
 map_data_load_map_from_disk_call, ark, String, ros2lcm
-map_data_save_map_to_disk_call, ark, String, ros2lcm
+map_data_save_map_to_disk_call, ark, SaveMapToDiskCall, ros2lcm
 
 ### Service Responses ##
 map_data_clear_response, ark, Empty, lcm2ros
