Added a node that will receive a goal and turn it into json for the mapper intermediary

--- a/repub_configs/ark_client_republishers.cfg
+++ b/repub_configs/ark_client_republishers.cfg
@@ -6,10 +6,11 @@ platform_control_odom, ark, Odometry, ros2lcm
 platform_odometry, ark, Odometry, ros2lcm
 clock, ark, Clock, ros2lcm
 stereo_camera_0, ark, PointCloud2, ros2lcm
+clock_echo, ark, Clock, lcm2ros
 
 ################ ARK SUBSCRIBED ####################
 cancel_goal, ark, Empty, ros2lcm
-send_goal, ark, String, ros2lcm
+send_goal, ark, SendGoal, ros2lcm
 
 ################ ARK PUBLISHED ####################
 platform_control_cmd_vel, ark, Twist, lcm2ros
