--- a/repub_configs/ark_server_republishers.cfg
+++ b/repub_configs/ark_server_republishers.cfg
@@ -6,10 +6,11 @@ platform_control_odom, ark, Odometry, lcm2ros
 platform_odometry, ark, Odometry, lcm2ros
 clock, ark, Clock, lcm2ros
 stereo_camera_0, ark, PointCloud2, lcm2ros
+clock_echo, ark, Clock, ros2lcm
 
 ################ ARK SUBSCRIBED ####################
 cancel_goal, ark, Empty, lcm2ros
-send_goal, ark, String, lcm2ros
+send_goal, ark, SendGoal, lcm2ros
 
 ################ ARK PUBLISHED ####################
 platform_control_cmd_vel, ark, Twist, ros2lcm
