Added all messages and service shims for the configuration script

--- a/repub_configs/ark_client_republishers.cfg
+++ b/repub_configs/ark_client_republishers.cfg
@@ -8,6 +8,13 @@ clock, ark, Clock, ros2lcm
 stereo_camera_0, ark, PointCloud2, ros2lcm
 clock_echo, ark, Clock, lcm2ros
 
+ark_config_settings_call, ark, ArkConfigSettingsCall, ros2lcm
+ark_start_call, ark, Empty, ros2lcm
+ark_stop_call, ark, Empty, ros2lcm
+ark_config_settings_response, ark, ArkConfigSettingsResponse, lcm2ros
+ark_start_response, ark, Empty, lcm2ros
+ark_stop_response, ark, Empty, lcm2ros
+
 ################ ARK SUBSCRIBED ####################
 cancel_goal, ark, Empty, ros2lcm
 send_goal, ark, SendGoal, ros2lcm
