--- a/repub_configs/ark_server_republishers.cfg
+++ b/repub_configs/ark_server_republishers.cfg
@@ -8,6 +8,13 @@ clock, ark, Clock, lcm2ros
 stereo_camera_0, ark, PointCloud2, lcm2ros
 clock_echo, ark, Clock, ros2lcm
 
+ark_config_settings_call, ark, ArkConfigSettingsCall, lcm2ros
+ark_start_call, ark, Empty, lcm2ros
+ark_stop_call, ark, Empty, lcm2ros
+ark_config_settings_response, ark, ArkConfigSettingsResponse, ros2lcm
+ark_start_response, ark, Empty, ros2lcm
+ark_stop_response, ark, Empty, ros2lcm
+
 ################ ARK SUBSCRIBED ####################
 cancel_goal, ark, Empty, lcm2ros
 send_goal, ark, SendGoal, lcm2ros
