--- a/repub_configs/ark_server_republishers.cfg
+++ b/repub_configs/ark_server_republishers.cfg
@@ -24,6 +24,7 @@ platform_control_cmd_vel, ark, Twist, ros2lcm
 map_data_features_markers_waypoint, ark, GeometryArray, ros2lcm
 map_data_features_zones_exclusion, ark, GeometryArray, ros2lcm
 control_selection_current_mode, ark, AutonomyMode, ros2lcm
+slam_map, ark, OccupancyGrid, ros2lcm
 slam_current_mode, ark, SlamMode, ros2lcm
 slam_localization_status, ark, LocalizationStatus, ros2lcm
 slam_estimated_pose, ark, PoseWithCovarianceStamped, ros2lcm
@@ -55,7 +56,10 @@ front_scan, ark, LaserScan, lcm2ros
 #######################
 
 ### Service Calls ###
-map_data_clear_call, ark, Empty, lcm2ros
+ark_config_settings_call, ark, ArkConfigSettingsCall, lcm2ros
+ark_start_call, ark, Empty, lcm2ros
+ark_stop_call, ark, Empty, lcm2ros
+control_selection_set_mode_call, ark, AutonomyMode, lcm2ros
 slam_set_mode_call, ark, SlamMode, lcm2ros
 slam_set_initial_pose_call, ark, PoseWithCovarianceStamped, lcm2ros
 control_selection_autonomy_clear_all_disabled_call, ark, Empty, lcm2ros
@@ -69,31 +73,34 @@ control_selection_core_clear_all_paused_call, ark, Empty, lcm2ros
 control_selection_core_disable_call, ark, String, lcm2ros
 control_selection_core_enable_call, ark, String, lcm2ros
 control_selection_core_pause_call, ark, String, lcm2ros
-control_selection_core_resume_call, ark, String, lcm2ros
-control_selection_set_mode_call, ark, AutonomyMode, lcm2ros
+control_selection_core_resume, ark, String, lcm2ros
+map_data_clear_call, ark, Empty, lcm2ros
 map_data_delete_map_call, ark, String, lcm2ros
 map_data_list_maps_call, ark, Empty, lcm2ros
 map_data_load_map_from_disk_call, ark, String, lcm2ros
 map_data_save_map_to_disk_call, ark, SaveMapToDiskCall, lcm2ros
 
 ### Service Responses ##
-map_data_clear_response, ark, Empty, ros2lcm
+ark_config_settings_response, ark, ArkConfigSettingsResponse, ros2lcm
+ark_start_response, ark, Empty, ros2lcm
+ark_stop_response, ark, Empty, ros2lcm
+control_selection_set_mode_response, ark, Empty, ros2lcm
 slam_set_mode_response, ark, Status, ros2lcm
 slam_set_initial_pose_response, ark, Bool, ros2lcm
 control_selection_autonomy_clear_all_disabled_response, ark, Empty, ros2lcm
 control_selection_autonomy_clear_all_paused_response, ark, Empty, ros2lcm
-control_selection_autonomy_disable_response, ark, Empty, ros2lcm
-control_selection_autonomy_enable_response, ark, Empty, ros2lcm
-control_selection_autonomy_pause_response, ark, Empty, ros2lcm
-control_selection_autonomy_resume_response, ark, Empty, ros2lcm
+control_selection_autonomy_disable_response, ark, String, ros2lcm
+control_selection_autonomy_enable_response, ark, String, ros2lcm
+control_selection_autonomy_pause_response, ark, String, ros2lcm
+control_selection_autonomy_resume_response, ark, String, ros2lcm
 control_selection_core_clear_all_disabled_response, ark, Empty, ros2lcm
 control_selection_core_clear_all_paused_response, ark, Empty, ros2lcm
-control_selection_core_disable_response, ark, Empty, ros2lcm
-control_selection_core_enable_response, ark, Empty, ros2lcm
-control_selection_core_pause_response, ark, Empty, ros2lcm
-control_selection_core_resume_response, ark, Empty, ros2lcm
-control_selection_set_mode_response, ark, Empty, ros2lcm
+control_selection_core_disable_response, ark, String, ros2lcm
+control_selection_core_enable_response, ark, String, ros2lcm
+control_selection_core_pause_response, ark, String, ros2lcm
+control_selection_core_resume, ark, String, ros2lcm
+map_data_clear_response, ark, Empty, ros2lcm
 map_data_delete_map_response, ark, Empty, ros2lcm
 map_data_list_maps_response, ark, StringArray, ros2lcm
-map_data_load_map_from_disk_response, ark, String, ros2lcm
+map_data_load_map_from_disk_response, ark, Result, ros2lcm
 map_data_save_map_to_disk_response, ark, Empty, ros2lcm
