--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,8 +19,8 @@ endif (LCM_FOUND)
 ## Declare ROS messages, services and actions ##
 ################################################
 
-FILE(GLOB rosMsgFiles RELATIVE "${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/msg" 
-    "${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/msg/*.msg")
+FILE(GLOB rosMsgFiles RELATIVE "${CMAKE_SOURCE_DIR}/msg"
+    "${CMAKE_SOURCE_DIR}/msg/*.msg")
 
 FOREACH(rosMsg ${rosMsgFiles})
     MESSAGE( STATUS "Processing message file: ${rosMsg}" )
@@ -63,8 +63,13 @@ catkin_package(
 # include_directories(include)
 include_directories( 
     ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}
+    ${CMAKE_SOURCE_DIR}
     ${catkin_INCLUDE_DIRS} 
 )
+
+if(NOT DEFINED LCM_LIBRARY)
+    set(LCM_LIBRARY lcm)
+endif()
 
 ## Declare a C++ library
 # add_library(ark_bridge
